--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,9 +13,36 @@ header {
   position: sticky;
   top: 0;
   background-color: rgb(82, 77, 77);
-  padding: 12px 0;
+  padding: 1rem 2.75rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.right-header {
+  display: flex;
+  padding: 0.25 0.75rem;
+}
+
+.search {
+  padding: 0.25rem 0.75rem;
+}
+
+.change-background {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: yellow;
+  margin-right: 1rem;
+}
+
+#particles canvas {
+  z-index: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
