--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,13 +10,16 @@
 
 header {
   width: 100%;
-  position: sticky;
-  top: 0;
-  background-color: rgb(82, 77, 77);
-  padding: 1rem 2.75rem;
+  height: 6rem;
+  background-color: rgb(36 42 56);
+  padding: 0 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.logo {
+  color: white;
 }
 
 .right-header {
@@ -29,8 +32,9 @@ header {
 }
 
 .change-background {
-  width: 2rem;
-  height: 2rem;
+  font-size: 1.25rem;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -41,8 +45,19 @@ header {
 }
 
 #particles canvas {
-  z-index: 0;
+  z-index: -1;
   height: 100%;
   width: 100%;
   position: absolute;
+}
+
+.right-header a {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+}
+
+.userPng {
+  width: 100%;
+  border-radius: 50%;
 }
