--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,24 @@
   box-sizing: border-box;
 }
 
+body {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+body.light {
+  background-color: white;
+  color: black;
+}
+
+body.dark {
+  background-color: black;
+  color: white;
+}
+
 header {
   width: 100%;
   height: 6rem;
-  background-color: rgb(36 42 56);
+  background-color: rgb(36 42 56 0);
   padding: 0 3rem;
   display: flex;
   justify-content: space-between;
@@ -19,7 +33,7 @@ header {
 }
 
 .logo {
-  color: white;
+  color: black;
 }
 
 .right-header {
@@ -27,8 +41,41 @@ header {
   padding: 0.25 0.75rem;
 }
 
+.search-box {
+  width: 20%;
+  position: relative;
+}
+
 .search {
   padding: 0.25rem 0.75rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 1rem;
+  box-shadow: inset 0 0 7px rgb(0, 0, 0);
+  width: 100%;
+  color: black;
+  border: none;
+  outline: none;
+}
+
+
+.search:focus {
+  border: none;
+  outline: none;
+}
+
+.btn-search {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgb(255, 255, 255);
+  box-shadow: inset 0 0 7px rgb(0, 0, 0);
+  width: 15%;
+  height: 100%;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .change-background {
