--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,32 +8,51 @@
   box-sizing: border-box;
 }
 
-body {
-  transition: background-color 0.3s ease, color 0.3s ease;
+#__next {
+  height: 100vh;
 }
 
-body.light {
-  background-color: white;
+.antialiased {
+  height: 100%;
+}
+
+body {
+  transition: background-color 0.3s ease, color 0.3s ease;
+  height: 100%;
+  background-color: #c9c9c9;
   color: black;
 }
 
-body.dark {
-  background-color: black;
-  color: white;
+.app {
+  width: 100%;
+  height: 100%;
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 3rem 3rem;
+}
+
+.main section {
+  flex-grow: 0.85;
+  height: 5rem;
+}
+
+main aside {
+  flex-shrink: 0.25;
 }
 
 header {
   width: 100%;
   height: 6rem;
-  background-color: rgb(36 42 56 0);
+  background-color: #fff;
+  color: black;
   padding: 0 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.logo {
-  color: black;
 }
 
 .right-header {
@@ -48,11 +67,11 @@ header {
 
 .search {
   padding: 0.25rem 0.75rem;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   border-radius: 1rem;
   box-shadow: inset 0 0 7px rgb(0, 0, 0);
   width: 100%;
-  color: black;
+  color: white;
   border: none;
   outline: none;
 }
@@ -67,7 +86,8 @@ header {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: rgb(255, 255, 255);
+  background-color: black;
+  color: white;
   box-shadow: inset 0 0 7px rgb(0, 0, 0);
   width: 15%;
   height: 100%;
@@ -107,4 +127,33 @@ header {
 .userPng {
   width: 100%;
   border-radius: 50%;
+}
+
+.card {
+  width: 200px;
+  height: 200px;
+
+}
+
+.card bg-img {
+  width: 100%;
+  height: 50%;
+  background-color: red;
+}
+
+.card bg-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.info-img {
+  background-color: red;
+  height: 50%;
+  width: 100%;
+}
+
+.filter-sidebar {
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 8px;
 }
