--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,13 +28,6 @@ body {
   height: 100%;
 }
 
-.main {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 3rem 3rem;
-}
-
 .main section {
   flex-grow: 0.85;
   height: 5rem;
@@ -51,7 +44,6 @@ header {
 
 .search-box {
   width: 20%;
-  position: relative;
 }
 
 .search {
@@ -61,10 +53,7 @@ header {
   box-shadow: inset 0 0 7px rgb(0, 0, 0);
   width: 100%;
   color: white;
-  border: none;
-  outline: none;
 }
-
 
 .search:focus {
   border: none;
@@ -72,9 +61,6 @@ header {
 }
 
 .btn-search {
-  position: absolute;
-  top: 0;
-  right: 0;
   background-color: black;
   color: white;
   box-shadow: inset 0 0 7px rgb(0, 0, 0);
@@ -82,22 +68,12 @@ header {
   height: 100%;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .change-background {
   font-size: 1.25rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: black;
   color: yellow;
-  margin-right: 1rem;
 }
 
 #particles canvas {
@@ -107,42 +83,10 @@ header {
   position: absolute;
 }
 
-.right-header a {
-  height: 2.5rem;
-  width: 2.5rem;
-  border-radius: 50%;
-}
-
-.userPng {
-  width: 100%;
-  border-radius: 50%;
-}
-
 .card {
-  width: 200px;
-  height: 200px;
-
-}
-
-.card bg-img {
-  width: 100%;
-  height: 50%;
-  background-color: red;
-}
-
-.card bg-img img {
-  width: 100%;
-  height: 100%;
-}
-
-.info-img {
-  background-color: red;
-  height: 50%;
-  width: 100%;
+  background-color: black;
 }
 
 .filter-sidebar {
-  padding: 1rem;
   background-color: #fff;
-  border-radius: 8px;
 }
