--- a/styles/globals.css
+++ b/styles/globals.css
@@ -351,7 +351,7 @@ header {
   transition: 0.6s ease-in-out 1.2s, visibility 0s 1s;
 }
 
-.container.active .form-box {
+.wrapper.active .form-box {
   right: 50%;
 }
 
@@ -359,7 +359,7 @@ header {
   visibility: hidden;
 }
 
-.container.active .form-box.register {
+.wrapper.active .form-box.register {
   visibility: visible;
 }
 
@@ -379,7 +379,7 @@ header {
   transition: 0.6s ease-in-out;
 }
 
-.container.active .toggle-form::before {
+.wrapper.active .toggle-form::before {
   left: 50%;
 }
 
@@ -393,14 +393,57 @@ header {
   transition: 0.6s;
 }
 
-.container.active .toggle-panel.toggle-left {
+.wrapper.active .toggle-panel.toggle-left {
   left: -50%;
   transition-delay: 0.6s;
 }
 
-.container.active .toggle-panel.toggle-right {
+.wrapper.active .toggle-panel.toggle-right {
   right: 0;
   transition-delay: 1.2s;
 }
 
+@media screen and (max-width: 650px) {
+  .wrapper {
+    height: calc(100% - 40px);
+  }
+  .form-box {
+    width: 100%;
+    height: 70%;
+    bottom: 0;
+  }
+  .wrapper.active .form-box {
+    right: 0;
+    bottom: 30%;
+  }
+  .toggle-form::before {
+    width: 100%;
+    height: 300%;
+    left: 0;
+    top: -270%;
+    border-radius: 20vw;
+  }
+  .wrapper.active .toggle-form::before {
+    left: 0;
+    top: 70%;
 
+  }
+  .toggle-panel {
+    width: 100%;
+    height: 30%;
+  }
+  .toggle-panel.toggle-left {
+    top: 0;
+  }
+  .wrapper.active .toggle-panel.toggle-left {
+    left: 0;
+    top: -30%;
+  }
+  .toggle-panel.toggle-right {
+    right: 0;
+    bottom: -30%;
+  }
+  .wrapper.active .toggle-panel.toggle-right {
+    bottom: 0;
+  }
+}
