--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,8 @@
   --bg-gray: #c2c3c5;
   --bg-black: #000;
   --bg-darkPurple: #25003e;
-  --bg-purple: #520089;
-  --bg-lightPurple: #973fd1;
+  --bg-purple: #7a5af8;
+  --bg-lightPurple: #DF71FFCC;
   --bg-darkBlue: #05071b;
   --bg-navyBlue: #040b11;
   --bg-lightBlue: #798DA3;
@@ -22,8 +22,8 @@
   --cl-gray: #c2c3c5;
   --cl-black: #000;
   --cl-darkPurple: #25003e;
-  --cl-purple: #520089;
-  --cl-lightPurple: #973fd1;
+  --cl-purple: #7a5af8;
+  --cl-lightPurple: #DF71FFCC;
   --cl-darkBlue: #05071b;
   --cl-navyBlue: #040b11;
   --cl-lightBlue: #798DA3;
@@ -94,15 +94,27 @@ main aside {
 
 .bg-img {
   background:
-    radial-gradient(circle farthest-side at 0% 50%, #3d5275 23.5%, #0000 0)21px 30px,
-    radial-gradient(circle farthest-side at 0% 50%, #00bbff 24%, #0000 0)19px 30px,
-    linear-gradient(#3d5275 14%, #0000 0, #0000 85%, #3d5275 0)0 0,
-    linear-gradient(150deg, #3d5275 24%, #00bbff 0, #00bbff 26%, #0000 0, #0000 74%, #00bbff 0, #00bbff 76%, #3d5275 0)0 0,
-    linear-gradient(30deg, #3d5275 24%, #00bbff 0, #00bbff 26%, #0000 0, #0000 74%, #00bbff 0, #00bbff 76%, #3d5275 0)0 0,
-    linear-gradient(90deg, #00bbff 2%, #3d5275 0, #3d5275 98%, #00bbff 0%)0 0 #3d5275;
+    radial-gradient(circle farthest-side at 0% 50%, var(--bg-darkGray2) 23.5%, #0000 0)21px 30px,
+    radial-gradient(circle farthest-side at 0% 50%, var(--bg-purple) 24%, #0000 0)19px 30px,
+    linear-gradient(var(--bg-darkGray2) 14%, #0000 0, #0000 85%, var(--bg-darkGray2) 0)0 0,
+    linear-gradient(150deg, var(--bg-darkGray2) 24%, var(--bg-purple) 0, var(--bg-purple) 26%, #0000 0, #0000 74%, var(--bg-purple) 0, var(--bg-purple) 76%, var(--bg-darkGray2) 0)0 0,
+    linear-gradient(30deg, var(--bg-darkGray2) 24%, var(--bg-purple) 0, var(--bg-purple) 26%, #0000 0, #0000 74%, var(--bg-purple) 0, var(--bg-purple) 76%, var(--bg-darkGray2) 0)0 0,
+    linear-gradient(90deg, var(--bg-purple) 2%, var(--bg-darkGray2) 0, var(--bg-darkGray2) 98%, var(--bg-purple) 0%)0 0 var(--bg-darkGray2);
   background-size: 40px 60px;
   background-color: #3d5275;
 }
+
+/* .bg-img {
+  background:
+    radial-gradient(circle farthest-side at 0% 50%, var(--bg-darkGray2) 23.5%, #0000 0)21px 30px,
+    radial-gradient(circle farthest-side at 0% 50%, var(--bg-darkGray) 24%, #0000 0)19px 30px,
+    linear-gradient(var(--bg-darkGray2) 14%, #0000 0, #0000 85%, var(--bg-darkGray2) 0)0 0,
+    linear-gradient(150deg, var(--bg-darkGray2) 24%, var(--bg-darkGray) 0, var(--bg-darkGray) 26%, #0000 0, #0000 74%, var(--bg-darkGray) 0, var(--bg-darkGray) 76%, var(--bg-darkGray2) 0)0 0,
+    linear-gradient(30deg, var(--bg-darkGray2) 24%, var(--bg-darkGray) 0, var(--bg-darkGray) 26%, #0000 0, #0000 74%, var(--bg-darkGray) 0, var(--bg-darkGray) 76%, var(--bg-darkGray2) 0)0 0,
+    linear-gradient(90deg, var(--bg-darkGray) 2%, var(--bg-darkGray2) 0, var(--bg-darkGray2) 98%, var(--bg-darkGray) 0%)0 0 var(--bg-darkGray2);
+  background-size: 40px 60px;
+  background-color: #3d5275;
+} */
 
 .input {
   background-color: #05071b;
@@ -536,7 +548,7 @@ main aside {
   transition: all 0.5s ease-in-out;
   background: radial-gradient(
     100% 75% at 55%,
-    rgba(223, 113, 255, 0.8) 0%,
+    var(--bg-lightPurple) 0%,
     rgba(223, 113, 255, 0) 100%
   );
   box-shadow: 0 0 3px black;
