--- a/styles/globals.css
+++ b/styles/globals.css
@@ -486,58 +486,25 @@ main aside {
 
 /* From Uiverse.io by ilkhoeri */ 
 .button {
-  --h-button: 48px;
-  --w-button: 102px;
-  --round: 0.75rem;
-  cursor: pointer;
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  transition: all 0.25s ease;
-  background: radial-gradient(
-      65.28% 65.28% at 50% 100%,
-      rgba(223, 113, 255, 0.8) 0%,
-      rgba(223, 113, 255, 0) 100%
-    ),
-    linear-gradient(0deg, #7a5af8, #7a5af8);
-  border-radius: var(--round);
-  border: none;
-  outline: none;
-  padding: 12px 18px;
+    --round: 0.75rem;
+    cursor: pointer;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition: all 0.25s ease;
+    background: radial-gradient(
+        65.28% 65.28% at 50% 100%,
+        rgba(223, 113, 255, 0.8) 0%,
+        rgba(223, 113, 255, 0) 100%
+      ),
+      linear-gradient(0deg, #7a5af8, #7a5af8);
+    border-radius: var(--round);
+    border: none;
+    outline: none;
+    padding: 12px 18px;
 }
-.btn-uploadImage {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-}
-.button::before,
-.button::after {
-  content: "";
-  position: absolute;
-  inset: var(--space);
-  transition: all 0.5s ease-in-out;
-  border-radius: calc(var(--round) - var(--space));
-  z-index: 0;
-}
-.button::before {
-  --space: 1px;
-  background: linear-gradient(
-    177.95deg,
-    rgba(255, 255, 255, 0.19) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-}
-.button::after {
-  --space: 2px;
-  background: radial-gradient(
-      65.28% 65.28% at 50% 100%,
-      rgba(223, 113, 255, 0.8) 0%,
-      rgba(223, 113, 255, 0) 100%
-    ),
-    linear-gradient(0deg, #7a5af8, #7a5af8);
-}
+
 .button:active {
   transform: scale(0.95);
 }
@@ -707,5 +674,76 @@ main aside {
 @keyframes filled {
   to {
     fill: white;
+  }
+}
+
+
+
+/*-------------------- LOGO css --------------------*/
+/*-------------------- LOGO css --------------------*/
+/*-------------------- LOGO css --------------------*/
+
+.bg-logo {
+  position: relative;
+  color: var(--cl-lightPurple);
+  cursor: pointer;
+  padding: 0.38rem 1.25rem;
+  border: 0.15rem solid var(--cl-lightPurple);
+  border-radius: 0.45rem;
+  background: none;
+  perspective: 2rem;
+  font-size: 2rem;
+  font-weight: 900;
+  letter-spacing: 0.5rem;
+  box-shadow: inset 0 0 0.5em 0 var(--cl-lightPurple),
+  0 0 0.5rem 0 var(--cl-lightPurple);
+}
+
+.logo {
+  float: left;
+  margin-right: -0.8rem;
+  text-shadow: 0 0 0.125rem hsl(0 0% 100% / 0.3), 
+  0 0 0.45rem var(--cl-lightPurple);
+  animation: lamp-logo 3s linear infinite;
+}
+
+.logo span {
+  opacity: 0.5;
+  animation: letter-lamp 2s linear infinite;
+}
+
+.bg-logo::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  z-index: -1;
+  background-color: var(--bg-lightPurple);
+  box-shadow: 0 0 2rem 0.2rem var(--cl-lightPurple);
+  transition: opacity 100ms linear;
+}
+
+.bg-logo:hover {
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: none;
+  animation: none;
+}
+
+.bg-logo:hover .logo {
+  animation: none;
+  text-shadow: none;
+  opacity: 1;
+}
+
+.bg-logo:hover:after {
+  opacity: 1;
+}
+
+@keyframes letter-lamp {
+  0% {
+    
   }
 }
