--- a/styles/globals.css
+++ b/styles/globals.css
@@ -394,10 +394,11 @@ main aside {
   left: -250%;
   width: 300%;
   height: 100%;
-  background: var(--bg-darkBlue);
+  /* background: var(--bg-white); */
   border-radius: 150px;
   z-index: 20;
   transition: 1.8s ease-in-out;
+  
 }
 
 .toggle-panel {
