--- a/styles/globals.css
+++ b/styles/globals.css
@@ -113,7 +113,7 @@ main aside {
   position: absolute;
 }
 
-.bg-img {
+/* .bg-img {
   background:
     radial-gradient(circle farthest-side at 0% 50%, var(--bg-darkGray2) 23.5%, #0000 0)21px 30px,
     radial-gradient(circle farthest-side at 0% 50%, var(--bg-purple) 24%, #0000 0)19px 30px,
@@ -123,18 +123,18 @@ main aside {
     linear-gradient(90deg, var(--bg-purple) 2%, var(--bg-darkGray2) 0, var(--bg-darkGray2) 98%, var(--bg-purple) 0%)0 0 var(--bg-darkGray2);
   background-size: 40px 60px;
   background-color: #3d5275;
+} */
+
+.bg-img {
+  background: radial-gradient(circle, transparent 20%, #141b22 20%, #141b22 80%, transparent 80%, transparent) 0% 0% / 30px 30px, radial-gradient(circle, transparent 20%, #141b22 20%, #141b22 80%, transparent 80%, transparent) 15px 15px / 30px 30px, linear-gradient(#7a5af8 1px, transparent 1px) 0px -0.5px / 15px 15px, linear-gradient(90deg, #7a5af8 1px, #141b22 1px) -0.5px 0px / 15px 15px #141b22;
+background-size: 30px 30px, 30px 30px, 15px 15px, 15px 15px;
+background-color: #141b22;
 }
 
 .bg-img.lightMod {
-  background:
-    radial-gradient(circle farthest-side at 0% 50%, var(--bg-gray) 23.5%, #0000 0)21px 30px,
-    radial-gradient(circle farthest-side at 0% 50%, var(--bg-white) 24%, #0000 0)19px 30px,
-    linear-gradient(var(--bg-gray) 14%, #0000 0, #0000 85%, var(--bg-gray) 0)0 0,
-    linear-gradient(150deg, var(--bg-gray) 24%, var(--bg-white) 0, var(--bg-white) 26%, #0000 0, #0000 74%, var(--bg-white) 0, var(--bg-white) 76%, var(--bg-gray) 0)0 0,
-    linear-gradient(30deg, var(--bg-gray) 24%, var(--bg-white) 0, var(--bg-white) 26%, #0000 0, #0000 74%, var(--bg-white) 0, var(--bg-white) 76%, var(--bg-gray) 0)0 0,
-    linear-gradient(90deg, var(--bg-white) 2%, var(--bg-gray) 0, var(--bg-gray) 98%, var(--bg-white) 0%)0 0 var(--bg-gray);
-  background-size: 40px 60px;
-  background-color: #3d5275;
+  background: radial-gradient(circle, transparent 20%, #eeeeee 20%, #eeeeee 80%, transparent 80%, transparent) 0% 0% / 30px 30px, radial-gradient(circle, transparent 20%, #eeeeee 20%, #eeeeee 80%, transparent 80%, transparent) 15px 15px / 30px 30px, linear-gradient(#05071b 1px, transparent 1px) 0px -0.5px / 15px 15px, linear-gradient(90deg, #05071b 1px, #eeeeee 1px) -0.5px 0px / 15px 15px #eeeeee;
+  background-size: 30px 30px, 30px 30px, 15px 15px, 15px 15px;
+  background-color: #eeeeee;
 }
 
 .input {
