--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1053,3 +1053,16 @@ background-color: var(--bg-darkGray2);
 /*-------------------- footer --------------------*/
 /*-------------------- footer --------------------*/
 /*-------------------- footer --------------------*/
+
+
+/*-------------------- subject-text --------------------*/
+/*-------------------- subject-text --------------------*/
+/*-------------------- subject-text --------------------*/
+
+.subject-text {
+  filter: url(#fire);
+}
+
+.subject-text h1 {
+  font-weight: 600;
+}
