--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1065,4 +1065,9 @@ background-color: var(--bg-darkGray2);
 
 .subject-text h1 {
   font-weight: 600;
+  text-shadow: 0 0 10px var(--bg-lightPurple),
+  0 0 40px var(--bg-lightPurple),
+  0 0 80px var(--bg-lightPurple),
+  0 0 160px var(--bg-lightPurple),
+  0 0 240px var(--bg-lightPurple);
 }
