--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1065,8 +1065,8 @@ background-color: var(--bg-darkGray2);
 /*-------------------- loding --------------------*/
 
 /* From Uiverse.io by Pradeepsaranbishnoi */ 
-.🤚 {
-  --skin-color: #E4C560;
+.hand {
+  --skin-color: #fff5d4;
   --tap-speed: 0.6s;
   --tap-stagger: 0.1s;
   position: relative;
@@ -1074,14 +1074,14 @@ background-color: var(--bg-darkGray2);
   height: 60px;
   margin-left: 80px;
 }
-.🤚:nth-child(1) {
+.hand:nth-child(1) {
     transform: rotateY(180deg);
-    margin: 0 3rem;
+    margin: 0 6rem;
 }
-.🤚:nth-child(2) {
-  margin: 0 3rem;
+.hand:nth-child(2) {
+  margin: 0 6rem;
 }
-.🤚:before {
+.hand:before {
   content: '';
   display: block;
   width: 180%;
@@ -1095,7 +1095,7 @@ background-color: var(--bg-darkGray2);
   opacity: 0.3;
 }
 
-.🌴 {
+.palm {
   display: block;
   width: 100%;
   height: 100%;
@@ -1106,7 +1106,7 @@ background-color: var(--bg-darkGray2);
   border-radius: 10px 40px;
 }
 
-.👍 {
+.thumb {
   position: absolute;
   width: 120%;
   height: 38px;
@@ -1120,19 +1120,19 @@ background-color: var(--bg-darkGray2);
   border-left: 2px solid rgba(0, 0, 0, 0.1);
 }
 
-.👍:after {
+.thumb:after {
   width: 20%;
   height: 60%;
   content: '';
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.8);
   position: absolute;
-  bottom: -8%;
+  bottom: 2%;
   left: 5px;
   border-radius: 60% 10% 10% 30%;
   border-right: 2px solid rgba(0, 0, 0, 0.05);
 }
 
-.👉 {
+.finger {
   position: absolute;
   width: 80%;
   height: 35px;
@@ -1146,7 +1146,7 @@ background-color: var(--bg-darkGray2);
   transform: rotate(10deg);
 }
 
-.👉:before {
+.finger:before {
   content: '';
   position: absolute;
   width: 140%;
@@ -1159,25 +1159,25 @@ background-color: var(--bg-darkGray2);
   border-radius: 20px;
 }
 
-.👉:nth-child(1) {
+.finger:nth-child(1) {
   animation-delay: 0;
   filter: brightness(70%);
   animation-name: tap-upper-1;
 }
 
-.👉:nth-child(2) {
+.finger:nth-child(2) {
   animation-delay: var(--tap-stagger);
   filter: brightness(80%);
   animation-name: tap-upper-2;
 }
 
-.👉:nth-child(3) {
+.finger:nth-child(3) {
   animation-delay: calc(var(--tap-stagger) * 2);
   filter: brightness(90%);
   animation-name: tap-upper-3;
 }
 
-.👉:nth-child(4) {
+.finger:nth-child(4) {
   animation-delay: calc(var(--tap-stagger) * 3);
   filter: brightness(100%);
   animation-name: tap-upper-4;
