--- a/styles/globals.css
+++ b/styles/globals.css
@@ -947,3 +947,38 @@ background-color: var(--bg-darkGray2);
   }
 }
   
+
+
+/*-------------------- error 500 --------------------*/
+/*-------------------- error 500 --------------------*/
+/*-------------------- error 500 --------------------*/
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  transition: transform .5s;
+}
+
+.error {
+  width: 400px;
+  padding: 40px;
+  text-align: center;
+}
+
+.error h1 {
+  font-size: 125px;
+  padding: 0;
+  margin: 0;
+  font-weight: 700;
+}
+
+.error h2 {
+  margin: -30px 0 0 0;
+  padding: 0;
+  font-size: 47px;
+  letter-spacing: 12px;
+}
+
