--- a/styles/globals.css
+++ b/styles/globals.css
@@ -953,32 +953,33 @@ background-color: var(--bg-darkGray2);
 /*-------------------- error 500 --------------------*/
 /*-------------------- error 500 --------------------*/
 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100%;
-  transition: transform .5s;
+
+/* components/BillSVG.module.css */
+
+@keyframes blink-fancy {
+  0%, 25%, 28.33%, 45%, 48.33%, 51.67%, 93.33%, 96.67% { transform: scaleY(1); }
+  26.67%, 46.67%, 50%, 95% { transform: scaleY(0.1); }
 }
 
-.error {
-  width: 400px;
-  padding: 40px;
-  text-align: center;
+@keyframes flame-flicker-1 {
+  25% { transform: scale3d(1, 1.1, 1); }
+  40% { transform: scale3d(1, 0.8, 1); }
+  50% { transform: scale3d(1, 1.05, 1); }
+  65% { transform: scale3d(1, 0.75, 1); }
+  75% { transform: scale3d(1, 1, 1); }
+  90% { transform: scale3d(1, 1.15, 1); }
+  100% { transform: scale3d(1, 1, 1); }
 }
 
-.error h1 {
-  font-size: 125px;
-  padding: 0;
-  margin: 0;
-  font-weight: 700;
+/* Add other keyframes and styles as needed */
+
+.glow {
+  transform-origin: center center;
+  animation: opacity-pulse 4s ease-in-out infinite 0.1s, scale-pulse 4s ease-in-out alternate infinite;
 }
 
-.error h2 {
-  margin: -30px 0 0 0;
-  padding: 0;
-  font-size: 47px;
-  letter-spacing: 12px;
+#eyes-left, #eyes-right {
+  animation: blink-fancy 6s linear infinite;
 }
 
+/* Continue adding other CSS classes as needed */
