--- a/styles/globals.css
+++ b/styles/globals.css
@@ -879,3 +879,68 @@ body:hover #pixelCursor {
     max-width: 700px;
   }
 }
+
+/*-------------------- buttonDl --------------------*/
+/*-------------------- buttonDl --------------------*/
+/*-------------------- buttonDl --------------------*/
+.buttonDl {
+  --main-focus: #2d8cf0;
+  --font-color: #323232;
+  --bg-color-sub: #dedede;
+  --bg-color: #eee;
+  --main-color: #323232;
+  position: relative;
+  width: 99%; /* Change width to 100% */
+  height: 60px; /* Keep height as is */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #b0b0b0;
+  box-shadow: 18px 18px 10px var(--bg-darkGray2);
+  background-color: var(--bg-darkGray2);
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.buttonDl, .button__icon, .button__text {
+  transition: all 0.3s;
+}
+
+.buttonDl .button__text {
+  color: white;
+  font-weight: 600;
+  width: 100%;
+}
+
+.buttonDl .button__icon {
+  height: 100%;
+  width: 15%;
+  background-color: #b0b0b0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonDl .svg {
+  width: 20%;
+  fill: var(--main-color);
+}
+
+.buttonDl:hover {
+  background: var(--bg-color);
+}
+
+.buttonDl:hover .button__text {
+  color: transparent;
+  width: 0;
+}
+
+.buttonDl:hover .button__icon {
+  width: 100%;
+}
+
+.buttonDl:active {
+  transform: translate(3px, 3px);
+  box-shadow: 0px 0px var(--main-color);
+}
