--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,16 +96,6 @@ main aside {
   flex-shrink: 0.25;
 }
 
-.btn-search {
-  background-color: black;
-  color: white;
-  box-shadow: inset 0 0 7px rgb(0, 0, 0);
-  width: 15%;
-  height: 100%;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
 .bg-img {
 background-color: var(--bg-darkGray2);
 }
@@ -837,6 +827,12 @@ body:hover #pixelCursor {
   }
   a.button {
     padding: 12px 12px;
+  }
+}
+
+@media (max-width: 768px) {
+   .input {
+    padding-inline: 0.75rem;
   }
 }
   
