--- a/styles/globals.css
+++ b/styles/globals.css
@@ -940,3 +940,19 @@ body:hover #pixelCursor {
   transform: translate(3px, 3px);
   box-shadow: 0px 0px var(--main-color);
 }
+
+
+
+
+
+
+
+.Btn:hover .BG {
+  transform: rotate(35deg);
+  transform-origin: bottom;
+}
+
+.Btn:hover .svgContainer {
+  background-color: rgba(156, 156, 156, 0.466);
+  backdrop-filter: blur(4px);
+}
