--- a/styles/globals.css
+++ b/styles/globals.css
@@ -956,3 +956,21 @@ body:hover #pixelCursor {
   background-color: rgba(156, 156, 156, 0.466);
   backdrop-filter: blur(4px);
 }
+
+/* INPUTSource */
+
+.INPUTSource {
+  box-shadow: inset 0 0 3px white;
+}
+
+.INPUTSource:focus {
+  opacity: 1;
+  border: 0;
+  outline: 0;
+}
+
+.INPUTSource:not(:placeholder-shown) {
+  opacity: 1;
+  border: 0;
+  outline: 0;
+}
